--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,27 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
+    <div>
+        <table>
 
+        <th:block th:each = "job : ${jobs}" class ="job-listing">
+
+            <tr>
+                <td>
+                    <p th:text = "${'Id: ' + job.Id}"></p>
+                    <p th:text = "${'Name: ' + job.name}"></p>
+                    <p th:text = "${'Employer: ' + job.employer}"></p>
+                    <p th:text = "${'Location: ' + job.location}"></p>
+                    <p th:text = "${'Position: ' + positionType}"></p>
+                    <p th:text = "${'Skills: ' + coreCompetency}"></p>
+
+                </td>
+            </tr>
+
+        </th:block>
+
+        </table>
+    </div>
 </div>
 
 </body>
