--- a/src/main/resources/static/css/techjobs.css
+++ b/src/main/resources/static/css/techjobs.css
@@ -31,6 +31,7 @@ table.job-listing {
 
 table.job-listing td:first-child {
     font-weight: bold;
+    color: blue;
 }
 
 table.job-listing td:last-child {
