--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,27 +11,31 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
-    <div>
-        <table>
 
-        <th:block th:each = "job : ${jobs}" class ="job-listing">
+    <div th:replace = "fragments :: listOfJobs"></div>
 
-            <tr>
-                <td>
-                    <p th:text = "${'Id: ' + job.Id}"></p>
-                    <p th:text = "${'Name: ' + job.name}"></p>
-                    <p th:text = "${'Employer: ' + job.employer}"></p>
-                    <p th:text = "${'Location: ' + job.location}"></p>
-                    <p th:text = "${'Position: ' + positionType}"></p>
-                    <p th:text = "${'Skills: ' + coreCompetency}"></p>
+<!--    <div>-->
+<!--        <table class="job-listing">-->
 
-                </td>
-            </tr>
+<!--        <th:block th:each = "job : ${jobs}" class ="job-listing">-->
 
-        </th:block>
+<!--            <tr>-->
+<!--                <td>-->
+<!--                    <p th:text = "${'Id: ' + job.Id}"></p>-->
+<!--                    <p th:text = "${'Name: ' + job.name}"></p>-->
+<!--                    <p th:text = "${'Employer: ' + job.employer}"></p>-->
+<!--                    <p th:text = "${'Location: ' + job.location}"></p>-->
+<!--                    <p th:text = "${'Position: ' + job.positionType}"></p>-->
+<!--                    <p th:text = "${'Skills: ' + job.coreCompetency}"></p>-->
 
-        </table>
-    </div>
+<!--                </td>-->
+<!--            </tr>-->
+
+<!--        </th:block>-->
+
+<!--        </table>-->
+<!--    </div>-->
+
 </div>
 
 </body>
