--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,6 +38,30 @@
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
+    <div th:replace = "fragments :: listOfJobs"></div>
+<!--    <div>-->
+<!--        <table class = "job-listing">-->
+
+<!--            <th:block th:each = "job : ${jobs}" class ="job-listing">-->
+
+<!--                <tr>-->
+<!--                    <td>-->
+<!--                        <p th:text = "${'Id: ' + job.Id}"></p>-->
+<!--                        <p th:text = "${'Name: ' + job.name}"></p>-->
+<!--                        <p th:text = "${'Employer: ' + job.employer}"></p>-->
+<!--                        <p th:text = "${'Location: ' + job.location}"></p>-->
+<!--                        <p th:text = "${'Position: ' + job.positionType}"></p>-->
+<!--                        <p th:text = "${'Skills: ' + job.coreCompetency}"></p>-->
+
+<!--                    </td>-->
+<!--                </tr>-->
+
+<!--            </th:block>-->
+
+<!--        </table>-->
+<!--    </div>-->
+
+
 </div>
 
 </body>
